--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
         width: 100%;
         height: 500px;
     }
+    #chartdiv2{
+        width: 40%;
+        height: 300px;}
 </style>
 
 <!-- Resources -->
 <script src="./Js/amcharts5/index.js"></script>
 <script src="./Js/amcharts5/map.js"></script>
+<script src="./Js/amcharts5/xy.js"></script>
 <script src="./Js/geodata/worldLow.js"></script>
 <script src="./Js/amcharts5/themes/Animated.js"></script>
 <script src="./Js/scripts.js"></script>
+<script src="./Js/charts.js"></script>
 <script src="./Js/map.js"></script>
 <!-- HTML -->
+<body>
 <div id="chartdiv"></div>
+<div id="chartdiv2"></div>
+</body>
